karnc/tests/fixtures/negative/61_context_directory_mixed_kinds/src/foo/a.karn
commons foo

type A = Int
